--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: John-de-Lancaster-vol-III_69057
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69057-h/images/cover.jpg
 creator:
   author:
     agent_name: Cumberland, Richard
     gutenberg_agent_id: '55075'
     url: http://www.gutenberg.org/2009/agents/55075
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69057#John-de-Lancaster-vol-III
 gutenberg_issued: '2022-09-27'
 identifiers:
   gutenberg: '69057'
